examples/test/testpolicy13627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13627
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key15: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value41
      podSelector:
        matchLabels:
          key30: value44
          key21: value27
          key31: value10
